--- a/style.css
+++ b/style.css
@@ -1,143 +1,121 @@
-* {
+.conversation-wrap {
+  box-shadow: -2px 0 3px #ddd;
+  padding: 0;
+  max-height: 400px;
+  overflow: auto;
+}
+.conversation {
+  padding: 5px;
+  border-bottom: 1px solid #ddd;
   margin: 0;
+}
+
+.message-wrap {
+  box-shadow: 0 0 3px #ddd;
   padding: 0;
 }
-
-body {
-  margin: 20px auto;
-  font-family: "Lato";
-  font-weight: 300;
+.msg {
+  padding: 5px;
+  /*border-bottom:1px solid #ddd;*/
+  margin: 0;
 }
-
-form {
-  padding: 15px 25px;
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-}
-
-form label {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-input {
-  font-family: "Lato";
-}
-
-a {
-  color: #0000ff;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-#wrapper,
-#loginform {
-  margin: 0 auto;
-  padding-bottom: 25px;
-  background: #eee;
-  width: 600px;
-  max-width: 100%;
-  border: 2px solid #212121;
-  border-radius: 4px;
-}
-
-#loginform {
-  padding-top: 18px;
-  text-align: center;
-}
-
-#loginform p {
-  padding: 15px 25px;
-  font-size: 1.4rem;
-  font-weight: bold;
-}
-
-#chatbox {
-  text-align: left;
-  margin: 0 auto;
-  margin-bottom: 25px;
+.msg-wrap {
   padding: 10px;
-  background: #fff;
-  height: 300px;
-  width: 530px;
-  border: 1px solid #a7a7a7;
+  max-height: 400px;
   overflow: auto;
-  border-radius: 4px;
-  border-bottom: 4px solid #a7a7a7;
 }
 
-#usermsg {
-  flex: 1;
-  border-radius: 4px;
-  border: 1px solid #ff9800;
+.time {
+  color: #bfbfbf;
 }
 
-#name {
-  border-radius: 4px;
-  border: 1px solid #ff9800;
-  padding: 2px 8px;
+.send-wrap {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  padding: 10px;
+  /*background: #f8f8f8;*/
 }
 
-#submitmsg,
-#enter {
-  background: #ff9800;
-  border: 2px solid #e65100;
-  color: white;
-  padding: 4px 10px;
-  font-weight: bold;
-  border-radius: 4px;
+.send-message {
+  resize: none;
 }
 
-.error {
-  color: #ff0000;
+.highlight {
+  background-color: #f7f7f9;
+  border: 1px solid #e1e1e8;
 }
 
-#menu {
-  padding: 15px 25px;
-  display: flex;
+.send-message-btn {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 0;
+
+  border-bottom-right-radius: 0;
+}
+.btn-panel {
+  background: #f7f7f9;
 }
 
-#menu p.welcome {
-  flex: 1;
+.btn-panel .btn {
+  color: #b8b8b8;
+
+  transition: 0.2s all ease-in-out;
 }
 
-a#exit {
-  color: white;
-  background: #c62828;
-  padding: 4px 8px;
-  border-radius: 4px;
-  font-weight: bold;
-}
-
-.msgln {
-  margin: 0 0 5px 0;
-}
-
-.msgln span.left-info {
-  color: orangered;
-}
-
-.msgln span.chat-time {
+.btn-panel .btn:hover {
   color: #666;
-  font-size: 60%;
-  vertical-align: super;
+  background: #f8f8f8;
+}
+.btn-panel .btn:active {
+  background: #f8f8f8;
+  box-shadow: 0 0 1px #ddd;
 }
 
-.msgln b.user-name,
-.msgln b.user-name-left {
-  font-weight: bold;
-  background: #546e7a;
-  color: white;
-  padding: 2px 4px;
-  font-size: 90%;
-  border-radius: 4px;
-  margin: 0 5px 0 0;
+.btn-panel-conversation .btn,
+.btn-panel-msg .btn {
+  background: #f8f8f8;
+}
+.btn-panel-conversation .btn:first-child {
+  border-right: 1px solid #ddd;
 }
 
-.msgln b.user-name-left {
-  background: orangered;
+.msg-wrap .media-heading {
+  color: #003bb3;
+  font-weight: 700;
+}
+
+.msg-date {
+  background: none;
+  text-align: center;
+  color: #aaa;
+  border: none;
+  box-shadow: none;
+  border-bottom: 1px solid #ddd;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  /*        -webkit-border-radius: 10px;
+        border-radius: 10px;*/
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /*        -webkit-border-radius: 10px;
+        border-radius: 10px;*/
+  background: #ddd;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #ddd;
 }
