--- a/style.css
+++ b/style.css
@@ -1,121 +1,160 @@
-.conversation-wrap {
-  box-shadow: -2px 0 3px #ddd;
-  padding: 0;
-  max-height: 400px;
-  overflow: auto;
-}
-.conversation {
-  padding: 5px;
-  border-bottom: 1px solid #ddd;
-  margin: 0;
-}
-
-.message-wrap {
-  box-shadow: 0 0 3px #ddd;
-  padding: 0;
-}
-.msg {
-  padding: 5px;
-  /*border-bottom:1px solid #ddd;*/
-  margin: 0;
-}
-.msg-wrap {
-  padding: 10px;
-  max-height: 400px;
-  overflow: auto;
-}
-
-.time {
-  color: #bfbfbf;
-}
-
-.send-wrap {
-  border-top: 1px solid #eee;
+.chatperson {
+  display: block;
   border-bottom: 1px solid #eee;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-bottom: 15px;
+  padding: 4px;
+}
+.chatperson:hover {
+  text-decoration: none;
+  border-bottom: 1px solid orange;
+}
+.namechat {
+  display: inline-block;
+  vertical-align: middle;
+}
+.chatperson .chatimg img {
+  width: 40px;
+  height: 40px;
+  background-image: url("http://i.imgur.com/JqEuJ6t.png");
+}
+.chatperson .pname {
+  font-size: 18px;
+  padding-left: 5px;
+}
+.chatperson .lastmsg {
+  font-size: 12px;
+  padding-left: 5px;
+  color: #ccc;
+}
+
+body {
+  height: 400px;
+  position: fixed;
+  bottom: 0;
+}
+.col-md-2,
+.col-md-10 {
+  padding: 0;
+}
+.panel {
+  margin-bottom: 0px;
+}
+.chat-window {
+  bottom: 0;
+  position: fixed;
+  float: right;
+  margin-left: 10px;
+}
+.chat-window > div > .panel {
+  border-radius: 5px 5px 0 0;
+}
+.icon_minim {
+  padding: 2px 10px;
+}
+.msg_container_base {
+  background: #e5e5e5;
+  margin: 0;
+  padding: 0 10px 10px;
+  max-height: 300px;
+  overflow-x: hidden;
+}
+.top-bar {
+  background: #666;
+  color: white;
   padding: 10px;
-  /*background: #f8f8f8;*/
+  position: relative;
+  overflow: hidden;
+}
+.msg_receive {
+  padding-left: 0;
+  margin-left: 0;
+}
+.msg_sent {
+  padding-bottom: 20px !important;
+  margin-right: 0;
+}
+.messages {
+  background: white;
+  padding: 10px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  max-width: 100%;
+}
+.messages > p {
+  font-size: 13px;
+  margin: 0 0 0.2rem 0;
+}
+.messages > time {
+  font-size: 11px;
+  color: #ccc;
+}
+.msg_container {
+  padding: 10px;
+  overflow: hidden;
+  display: flex;
+}
+img {
+  display: block;
+  width: 100%;
+}
+.avatar {
+  position: relative;
+}
+.base_receive > .avatar:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border: 5px solid #fff;
+  border-left-color: rgba(0, 0, 0, 0);
+  border-bottom-color: rgba(0, 0, 0, 0);
 }
 
-.send-message {
-  resize: none;
+.base_sent {
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.base_sent > .avatar:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border: 5px solid white;
+  border-right-color: transparent;
+  border-top-color: transparent;
+  box-shadow: 1px 1px 2px rgba(black, 0.2); // not quite perfect but close
 }
 
-.highlight {
-  background-color: #f7f7f9;
-  border: 1px solid #e1e1e8;
+.msg_sent > time {
+  float: right;
 }
 
-.send-message-btn {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 0;
-
-  border-bottom-right-radius: 0;
-}
-.btn-panel {
-  background: #f7f7f9;
-}
-
-.btn-panel .btn {
-  color: #b8b8b8;
-
-  transition: 0.2s all ease-in-out;
-}
-
-.btn-panel .btn:hover {
-  color: #666;
-  background: #f8f8f8;
-}
-.btn-panel .btn:active {
-  background: #f8f8f8;
-  box-shadow: 0 0 1px #ddd;
-}
-
-.btn-panel-conversation .btn,
-.btn-panel-msg .btn {
-  background: #f8f8f8;
-}
-.btn-panel-conversation .btn:first-child {
-  border-right: 1px solid #ddd;
-}
-
-.msg-wrap .media-heading {
-  color: #003bb3;
-  font-weight: 700;
-}
-
-.msg-date {
-  background: none;
-  text-align: center;
-  color: #aaa;
-  border: none;
-  box-shadow: none;
-  border-bottom: 1px solid #ddd;
-}
-
-body::-webkit-scrollbar {
-  width: 12px;
-}
-
-/* Let's get this party started */
-::-webkit-scrollbar {
-  width: 6px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
+.msg_container_base::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  /*        -webkit-border-radius: 10px;
-        border-radius: 10px;*/
+  background-color: #f5f5f5;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  /*        -webkit-border-radius: 10px;
-        border-radius: 10px;*/
-  background: #ddd;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+.msg_container_base::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
 }
-::-webkit-scrollbar-thumb:window-inactive {
-  background: #ddd;
+
+.msg_container_base::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+.btn-group.dropup {
+  position: fixed;
+  left: 0px;
+  bottom: 0;
 }
